[package]
name = "syms"
version = "0.2.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2018"
description = "Quick utility to view exported symbols from binaries"
readme = "README.md"
repository = "https://github.com/Chris--B/symbols"
license-file = "LICENSE"

[dependencies]
goblin = "0.3.4"
failure = "0.1"
msvc-demangler = "0.8"
